# pocketstack

./: Cargo.toml  README.md
src/: main.rs
web/: index.html  package-lock.json  package.json  svelte.config.js
web/src/: App.svelte  main.ts
web/src/routes/: +layout.svelte  +page.svelte  +page.ts
web/src/routes/about/: +page.svelte
